--- a/style.css
+++ b/style.css
@@ -1,30 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,600;1,200;1,600&display=swap");
 
-body {
-  margin: 20px;
-  background-color: #ddd19712;
-}
-
-.input-bar {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  vertical-align: middle;
-  padding: 10px;
-  margin-bottom: 30px;
-}
-
-.p-input {
+.delete-button {
+  background-color: #addaff70;
+  border: 1px solid black;
+  box-sizing: border-box;
   font-family: "Nunito Sans", sans-serif;
-  display: block;
   font-size: 14px;
   font-weight: 600;
-  font-style: italic;
+  height: 30px;
   line-height: 14px;
   margin: 3px 8px;
-  width: 80px;
+  outline: none;
+  padding: auto 3px;
+  transition-duration: 0.4s;
+  width: 70px;
 }
 
 .div-labor {
@@ -33,113 +22,172 @@ body {
   margin: 10px 0px;
 }
 
-.tab {
-  margin-right: 20px;
-}
-
-.p-labor {
+.dollar-sign {
   font-family: "Nunito Sans", sans-serif;
-  display: inline-flex;
   font-size: 14px;
   font-weight: 600;
-  font-style: italic;
   line-height: 14px;
-  margin: 20px 0px;
-  text-align: right;
-  border: 1px solid #ccc;
+  margin: 8px 5px 8px 0px;
+}
+
+.h1 {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 28px;
+  font-weight: 600;
+  margin: 10px 0px;
+  text-align: center;
+}
+
+.input {
+  background-color: #ffffff00;
+  border: 1px solid black;
+  box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  height: 30px;
+  line-height: 14px;
+  margin: 3px 8px;
+  outline: none;
+  padding-left: 5px;
+  width: 150px;
+}
+
+.input-bar {
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-bottom: 30px;
+  padding: 10px;
+  vertical-align: middle;
+}
+
+.input-button {
+  background-color: #addaff70;
+  border: 1px solid black;
+  box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  height: 30px;
+  line-height: 14px;
+  margin: 3px 8px;
+  outline: none;
+  padding: auto 3px;
+  transition-duration: 0.4s;
+  width: 70px;
+}
+
+.input-number {
+  background-color: #ffffff00;
+  border: 1px solid black;
+  box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  height: 30px;
+  line-height: 14px;
+  margin: 3px 8px;
+  outline: none;
+  padding-left: 5px;
+  width: 120px;
+}
+
+.input-salary {
+  background-color: #ffffff00;
+  border: 1px solid black;
+  box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  height: 30px;
+  line-height: 14px;
+  outline: none;
+  padding-left: 5px;
+  width: 120px;
+}
+
+.over-budget {
+  background-color: #8a2929;
+  border: 1px solid black;
+  color: white;
+  font-size: 20px;
   padding: 10px;
   transition: 0.4s linear;
 }
 
-.input {
-  height: 30px;
-  width: 150px;
-  box-sizing: border-box;
+.p-input {
+  display: block;
   font-family: "Nunito Sans", sans-serif;
   font-size: 14px;
+  font-style: italic;
   font-weight: 600;
   line-height: 14px;
-  padding-left: 5px;
-  outline: none;
   margin: 3px 8px;
-  border: 1px solid black;
-  background-color: #ffffff00;
+  width: 80px;
 }
 
-.input-number {
-  height: 30px;
-  width: 120px;
-  box-sizing: border-box;
+.p-labor {
+  border: 1px solid #ccc;
+  display: inline-flex;
   font-family: "Nunito Sans", sans-serif;
   font-size: 14px;
+  font-style: italic;
   font-weight: 600;
   line-height: 14px;
-  padding-left: 5px;
-  outline: none;
-  margin: 3px 8px;
-  border: 1px solid black;
-  background-color: #ffffff00;
-}
-
-.dollar-sign {
-  font-family: "Nunito Sans", sans-serif;
-  font-size: 14px;
-  line-height: 14px;
-  font-weight: 600;
-  margin: 8px 5px 8px 0px;
-}
-
-.input-salary {
-  height: 30px;
-  width: 120px;
-  box-sizing: border-box;
-  font-family: "Nunito Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 14px;
-  padding-left: 5px;
-  outline: none;
-  border: 1px solid black;
-  background-color: #ffffff00;
+  margin: 20px 0px;
+  padding: 10px;
+  text-align: right;
+  transition: 0.4s linear;
 }
 
 .salary-div {
+  box-sizing: content-box;
   display: inline-flex;
   margin: 3px 8px;
   padding: 0;
-  box-sizing: content-box;
 }
 
-.input-button {
-  height: 30px;
-  width: 70px;
-  background-color: #addaff70;
-  font-family: "Nunito Sans", sans-serif;
-  line-height: 14px;
-  padding: auto 3px;
-  font-size: 14px;
-  font-weight: 600;
-  box-sizing: border-box;
-  margin: 3px 8px;
-  border: 1px solid black;
-  outline: none;
-  transition-duration: 0.4s;
+.tab {
+  margin-right: 20px;
+}
+.table-button-cell {
+  width: 100px;
 }
 
-.delete-button {
-  height: 30px;
-  width: 70px;
-  background-color: #addaff70;
+.td {
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
   font-family: "Nunito Sans", sans-serif;
-  line-height: 14px;
-  padding: auto 3px;
   font-size: 14px;
+  font-weight: 200;
+  padding: 0.25rem;
+  text-align: left;
+}
+
+.th {
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 16px;
   font-weight: 600;
-  box-sizing: border-box;
-  margin: 3px 8px;
-  border: 1px solid black;
-  outline: none;
-  transition-duration: 0.4s;
+  padding: 0.25rem;
+  text-align: left;
+}
+
+::placeholder {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 14px;
+  font-style: italic;
+  font-weight: 200;
+  padding-left: 5px;
+}
+
+body {
+  background-color: #ddd19712;
+  margin: 20px;
 }
 
 button:hover {
@@ -147,62 +195,13 @@ button:hover {
   color: white;
 }
 
-.h1 {
-  font-family: "Nunito Sans", sans-serif;
-  font-weight: 600;
-  font-size: 28px;
-  text-align: center;
-  margin: 10px 0px;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  margin: 0;
+  webkit-appearance: none;
 }
 
 table {
   border-collapse: collapse;
   width: 100%;
-}
-
-.th {
-  font-family: "Nunito Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  padding: 0.25rem;
-  text-align: left;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-}
-
-.td {
-  font-family: "Nunito Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 200;
-  padding: 0.25rem;
-  text-align: left;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-}
-
-.table-button-cell {
-  width: 100px;
-}
-
-.over-budget {
-  font-size: 20px;
-  color: white;
-  background-color: #8a2929;
-  transition: 0.4s linear;
-  border: 1px solid black;
-  padding: 10px;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-::placeholder {
-  font-family: "Nunito Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 200;
-  font-style: italic;
-  padding-left: 5px;
 }
