fixed css webkit formatting error

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ button:hover {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   margin: 0;
-  webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 table {
